css - added fix for bad positioning on check in customized checkboxes when parent tag has text-align: center;

--- a/src/PeskyCMF/public/less/cmf.app.less
+++ b/src/PeskyCMF/public/less/cmf.app.less
@@ -591,3 +591,11 @@ aside.main-sidebar {
     font-size: 15px;
     text-align: center;
 }
+
+.wide-tooltips .tooltip-inner {
+    max-width: 400px;
+}
+
+.checkbox input[type=checkbox]:checked + label:after {
+    text-align: left !important;
+}
